# trading-analytics

./: .gitignore  Cargo.toml
coverage/: cobertura.xml  tarpaulin-report.html
scripts/: collect_rs.sh  coverage.sh  tree.sh
src/: lib.rs  main.rs  parsing.rs  trades.rs  types.rs  utils.rs
tests/: parsing.rs  trades.rs
