[package]
name = "trading-analytics"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabwriter = "1"


[profile.release]
strip = true        # Remove symbols from binary
opt-level = 2       # Mid optimization for speed
lto = true          # Optimize at link stage ("fat")
codegen-units = 1   # Reduce parallel codegen to maximize optimizations
panic = "abort"     # Remove unwind information, reducing binary size and overhead (no backtraces in production)
debug = false
